added analytics to blog.domain

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,9 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
-  {% if site.google_analytics %}
+  <!--
+  {% if site.google_analytics %} -->
   {% include analytics.html %}
-  {% endif %}
+  {% include analytics2.html %}
+  <!-- {% endif %} -->
 </head>
