--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,11 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
+    <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
+    <a class="sidebar-nav-item" href="https://github.com/abacao/devopslx-terraform">Terraform Talk</a>
+    <a class="sidebar-nav-item" href="https://github.com/abacao/plugins">Franz Gogs Plugin</a>
+    <a class="sidebar-nav-item" href="https://addons.mozilla.org/pt-pt/thunderbird/addon/cardbook/">CardBook</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
