added snap to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,7 @@
     <a class="sidebar-nav-item" href="https://github.com/abacao/devopslx-terraform">Terraform Talk</a>
     <a class="sidebar-nav-item" href="https://github.com/abacao/plugins">Franz Gogs Plugin</a>
     <a class="sidebar-nav-item" href="https://addons.mozilla.org/pt-pt/thunderbird/addon/cardbook/">CardBook</a>
+    <a class="sidebar-nav-item" href="https://uappexplorer.com/app/packer-abacao.abacao/">Packer in Snap</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
