--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,7 +31,7 @@
     <a class="sidebar-nav-item" href="https://github.com/abacao/plugins">Franz Gogs Plugin</a>
     <a class="sidebar-nav-item" href="https://addons.mozilla.org/pt-pt/thunderbird/addon/cardbook/">CardBook</a>
     <a class="sidebar-nav-item" href="https://uappexplorer.com/app/packer-abacao.abacao/">Packer in Snap</a>
-    <a class="sidebar-nav-item" href="https://github.com/abacao/Kodi17-UbuntuServer">Boot to Kodi</a>
+    <a class="sidebar-nav-item" href="https://github.com/abacao/Kodi17-UbuntuServer">Boot2Kodi</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
