--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
 
   <!-- RSS -->
+  {% feed_meta %}
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <!--
