--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,6 @@
 
   <!--
   {% if site.google_analytics %} -->
-  {% include analytics.html %}
-  {% include analytics2.html %}
+  {% include site.analytics.html %}
   <!-- {% endif %} -->
 </head>
