--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,9 @@
   {% feed_meta %}
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
-  <!--
-  {% if site.google_analytics %} -->
-  {% include site.analytics.html %}
-  <!-- {% endif %} -->
+  <!-- -->
+  {% if site.google_analytics %}
+    {% include analytics.html %}
+  {% endif %}
+  <!-- -->
 </head>
