--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,6 @@
         }, false);
       })(document);
     </script>
-    {% include analytics2.html %}
+    {% include analytics.html %}
   </body>
 </html>
