--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,6 +37,7 @@
 
   <div class="sidebar-item">
     <p>
+      ![alt text]({{ site.baseurl }}/_layouts/rss.png "RSS Feed")
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
   </div>
