--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,7 +37,7 @@
 
   <div class="sidebar-item">
     <p>
-      <img src="{{ site.baseurl }}/_layouts/rss.png" alt="RSS Feed">
+      <img src="rss.png" alt="RSS Feed">
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
   </div>
