--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,7 +37,9 @@
 
   <div class="sidebar-item">
     <p>
-      <img src="rss.png" alt="RSS Feed">
+      <a href="{{ site.url }}/atom.xml">
+        <img src="http://pngimages.net/sites/default/files/rss-png-image-2986.png" alt="RSS Feed" style="width:42px;height:42px;border:0;">
+      </a>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
   </div>
