--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,7 +39,7 @@
   <div class="sidebar-item">
     <p>
       <a href="{{ site.url }}/atom.xml">
-        <img src="http://pngimages.net/sites/default/files/rss-png-image-2986.png" alt="RSS Feed" style="width:42px;height:42px;border:0;">
+        <img src="https://pngimages.net/sites/default/files/rss-png-image-2986.png" alt="RSS Feed" style="width:42px;height:42px;border:0;">
       </a>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
